crates/auto-ascii-eval/tests/snapshots/golden_grids__gradient-motion_206x58_mono.snap
---
source: crates/auto-ascii-eval/tests/golden_grids.rs
expression: s
---
gradient-motion frame 10
term: 206x58  viewport: 206x58  pads: L0 R0 T0 B0
palette: mono  fg: none (glyph-only)
+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
|....::::::::::::::::ccccccccccccccccooooooooooooooooOOOOOOOOOOOOOOOOO8888888888888888@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@8888888888888888OOOOOOOOOOOOOOOOooooooooooooooooccccccccccccccccc::::::::::::::::|
|.::::::::::::::::ccccccccccccccccooooooooooooooooOOOOOOOOOOOOOOOOO8888888888888888@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@8888888888888888OOOOOOOOOOOOOOOOooooooooooooooooccccccccccccccccc::::::::::::::::...|
|::::::::::::::ccccccccccccccccooooooooooooooooOOOOOOOOOOOOOOOOO8888888888888888@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@8888888888888888OOOOOOOOOOOOOOOOooooooooooooooooccccccccccccccccc::::::::::::::::......|
|:::::::::::ccccccccccccccccoooooooooooooooooOOOOOOOOOOOOOOOO8888888888888888@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@8888888888888888OOOOOOOOOOOOOOOOooooooooooooooooccccccccccccccccc::::::::::::::::.........|
|::::::::ccccccccccccccccoooooooooooooooooOOOOOOOOOOOOOOOO8888888888888888@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@8888888888888888OOOOOOOOOOOOOOOOooooooooooooooooccccccccccccccccc::::::::::::::::............|
|:::::ccccccccccccccccoooooooooooooooooOOOOOOOOOOOOOOOO8888888888888888@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@8888888888888888OOOOOOOOOOOOOOOOooooooooooooooooccccccccccccccccc::::::::::::::::...............|
|::ccccccccccccccccoooooooooooooooooOOOOOOOOOOOOOOOO8888888888888888@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@8888888888888888OOOOOOOOOOOOOOOOooooooooooooooooccccccccccccccccc::::::::::::::::................  |
|cccccccccccccccooooooooooooooooOOOOOOOOOOOOOOOOO8888888888888888@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@8888888888888888OOOOOOOOOOOOOOOOooooooooooooooooccccccccccccccccc::::::::::::::::................     |
|ccccccccccccooooooooooooooooOOOOOOOOOOOOOOOOO8888888888888888@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@8888888888888888OOOOOOOOOOOOOOOOooooooooooooooooccccccccccccccccc::::::::::::::::................        |
|cccccccccooooooooooooooooOOOOOOOOOOOOOOOOO8888888888888888@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@8888888888888888OOOOOOOOOOOOOOOOooooooooooooooooccccccccccccccccc::::::::::::::::................           |
|ccccccoooooooooooooooooOOOOOOOOOOOOOOOO8888888888888888@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@8888888888888888OOOOOOOOOOOOOOOOooooooooooooooooccccccccccccccccc::::::::::::::::................              |
|cccoooooooooooooooooOOOOOOOOOOOOOOOO8888888888888888@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@8888888888888888OOOOOOOOOOOOOOOOooooooooooooooooccccccccccccccccc::::::::::::::::................                 |
|oooooooooooooooooOOOOOOOOOOOOOOOO8888888888888888@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@8888888888888888OOOOOOOOOOOOOOOOooooooooooooooooccccccccccccccccc::::::::::::::::................                    |
|ooooooooooooooOOOOOOOOOOOOOOOO8888888888888888@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@8888888888888888OOOOOOOOOOOOOOOOooooooooooooooooccccccccccccccccc::::::::::::::::................                       |
|ooooooooooOOOOOOOOOOOOOOOOO8888888888888888@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@8888888888888888OOOOOOOOOOOOOOOOooooooooooooooooccccccccccccccccc::::::::::::::::................                          |
|oooooooOOOOOOOOOOOOOOOOO8888888888888888@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@8888888888888888OOOOOOOOOOOOOOOOooooooooooooooooccccccccccccccccc::::::::::::::::................                             |
|ooooOOOOOOOOOOOOOOOOO8888888888888888@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@8888888888888888OOOOOOOOOOOOOOOOooooooooooooooooccccccccccccccccc::::::::::::::::................                                |
|oOOOOOOOOOOOOOOOOO8888888888888888@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@8888888888888888OOOOOOOOOOOOOOOOooooooooooooooooccccccccccccccccc::::::::::::::::................                                   |
|OOOOOOOOOOOOOOO8888888888888888@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@8888888888888888OOOOOOOOOOOOOOOOooooooooooooooooccccccccccccccccc::::::::::::::::................                                      |
|OOOOOOOOOOOO8888888888888888@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@8888888888888888OOOOOOOOOOOOOOOOooooooooooooooooccccccccccccccccc::::::::::::::::................                                        .|
|OOOOOOOOO8888888888888888@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@8888888888888888OOOOOOOOOOOOOOOOooooooooooooooooccccccccccccccccc::::::::::::::::................                                        ....|
|OOOOOO8888888888888888@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@8888888888888888OOOOOOOOOOOOOOOOooooooooooooooooccccccccccccccccc::::::::::::::::................                                        .......|
|OOO8888888888888888@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@8888888888888888OOOOOOOOOOOOOOOOooooooooooooooooccccccccccccccccc::::::::::::::::................                                        ..........|
|8888888888888888@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@8888888888888888OOOOOOOOOOOOOOOOooooooooooooooooccccccccccccccccc::::::::::::::::................                                        .............|
|8888888888888@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@8888888888888888OOOOOOOOOOOOOOOOooooooooooooooooccccccccccccccccc::::::::::::::::................                                        ................|
|8888888888@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@8888888888888888OOOOOOOOOOOOOOOOooooooooooooooooccccccccccccccccc::::::::::::::::................                                        ................:::|
|8888888@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@8888888888888888OOOOOOOOOOOOOOOOooooooooooooooooccccccccccccccccc::::::::::::::::................                                        ................::::::|
|8888@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@8888888888888888OOOOOOOOOOOOOOOOooooooooooooooooccccccccccccccccc::::::::::::::::................                                        ................:::::::::|
|8@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@8888888888888888OOOOOOOOOOOOOOOOooooooooooooooooccccccccccccccccc::::::::::::::::................                                        ................::::::::::::|
|@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@8888888888888888OOOOOOOOOOOOOOOOooooooooooooooooccccccccccccccccc::::::::::::::::................                                        ................:::::::::::::::|
|@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@8888888888888888OOOOOOOOOOOOOOOOooooooooooooooooccccccccccccccccc::::::::::::::::................                                        ................:::::::::::::::::c|
|@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@8888888888888888OOOOOOOOOOOOOOOOooooooooooooooooccccccccccccccccc::::::::::::::::................                                        ................:::::::::::::::::cccc|
|@@@@@@@@@@@@@@@@@@@@@@@@@@@@@8888888888888888OOOOOOOOOOOOOOOOooooooooooooooooccccccccccccccccc::::::::::::::::................                                        ................:::::::::::::::::ccccccc|
|@@@@@@@@@@@@@@@@@@@@@@@@@@8888888888888888OOOOOOOOOOOOOOOOooooooooooooooooccccccccccccccccc::::::::::::::::................                                        ................:::::::::::::::::cccccccccc|
|@@@@@@@@@@@@@@@@@@@@@@@8888888888888888OOOOOOOOOOOOOOOOooooooooooooooooccccccccccccccccc::::::::::::::::................                                        ................:::::::::::::::::ccccccccccccc|
|@@@@@@@@@@@@@@@@@@@@8888888888888888OOOOOOOOOOOOOOOOooooooooooooooooccccccccccccccccc::::::::::::::::................                                        .................::::::::::::::::cccccccccccccccc|
|@@@@@@@@@@@@@@@@@8888888888888888OOOOOOOOOOOOOOOOooooooooooooooooccccccccccccccccc::::::::::::::::................                                        ................::::::::::::::::cccccccccccccccccooo|
|@@@@@@@@@@@@@@8888888888888888OOOOOOOOOOOOOOOOooooooooooooooooccccccccccccccccc::::::::::::::::................                                        ................::::::::::::::::cccccccccccccccccoooooo|
|@@@@@@@@@@@8888888888888888OOOOOOOOOOOOOOOOooooooooooooooooccccccccccccccccc::::::::::::::::................                                        ................::::::::::::::::cccccccccccccccccooooooooo|
|@@@@@@@@8888888888888888OOOOOOOOOOOOOOOOooooooooooooooooccccccccccccccccc::::::::::::::::................                                        ................:::::::::::::::::ccccccccccccccccoooooooooooo|
|@@@@@8888888888888888OOOOOOOOOOOOOOOOooooooooooooooooccccccccccccccccc::::::::::::::::................                                        ................:::::::::::::::::ccccccccccccccccooooooooooooooo|
|@@8888888888888888OOOOOOOOOOOOOOOOooooooooooooooooccccccccccccccccc::::::::::::::::................                                        ................:::::::::::::::::ccccccccccccccccooooooooooooooooOO|
|888888888888888OOOOOOOOOOOOOOOOooooooooooooooooccccccccccccccccc::::::::::::::::................                                        ................:::::::::::::::::ccccccccccccccccooooooooooooooooOOOOO|
|888888888888OOOOOOOOOOOOOOOOooooooooooooooooccccccccccccccccc::::::::::::::::................                                        ................::::::::::::::::cccccccccccccccccooooooooooooooooOOOOOOOO|
|888888888OOOOOOOOOOOOOOOOooooooooooooooooccccccccccccccccc::::::::::::::::................                                        ................::::::::::::::::cccccccccccccccccooooooooooooooooOOOOOOOOOOO|
|888888OOOOOOOOOOOOOOOOooooooooooooooooccccccccccccccccc::::::::::::::::................                                        ................:::::::::::::::::ccccccccccccccccooooooooooooooooOOOOOOOOOOOOOO|
|888OOOOOOOOOOOOOOOOooooooooooooooooccccccccccccccccc::::::::::::::::................                                        ................:::::::::::::::::ccccccccccccccccooooooooooooooooOOOOOOOOOOOOOOOO8|
|OOOOOOOOOOOOOOOOooooooooooooooooccccccccccccccccc::::::::::::::::................                                        ................:::::::::::::::::ccccccccccccccccooooooooooooooooOOOOOOOOOOOOOOOO8888|
|OOOOOOOOOOOOOooooooooooooooooccccccccccccccccc::::::::::::::::................                                        ................:::::::::::::::::ccccccccccccccccooooooooooooooooOOOOOOOOOOOOOOOO8888888|
|OOOOOOOOOOooooooooooooooooccccccccccccccccc::::::::::::::::................                                        .................::::::::::::::::ccccccccccccccccooooooooooooooooOOOOOOOOOOOOOOOO8888888888|
|OOOOOOOooooooooooooooooccccccccccccccccc::::::::::::::::................                                        ................:::::::::::::::::ccccccccccccccccooooooooooooooooOOOOOOOOOOOOOOOO8888888888888|
|OOOOooooooooooooooooccccccccccccccccc::::::::::::::::................                                        ................:::::::::::::::::ccccccccccccccccooooooooooooooooOOOOOOOOOOOOOOOO8888888888888888|
|Oooooooooooooooooccccccccccccccccc::::::::::::::::................                                        ................:::::::::::::::::ccccccccccccccccooooooooooooooooOOOOOOOOOOOOOOOO8888888888888888@@@|
|ooooooooooooooccccccccccccccccc::::::::::::::::................                                        ................:::::::::::::::::ccccccccccccccccooooooooooooooooOOOOOOOOOOOOOOOO8888888888888888@@@@@@|
|oooooooooooccccccccccccccccc::::::::::::::::................                                        .................::::::::::::::::ccccccccccccccccooooooooooooooooOOOOOOOOOOOOOOOO8888888888888888@@@@@@@@@|
|ooooooooccccccccccccccccc::::::::::::::::................                                        .................::::::::::::::::ccccccccccccccccooooooooooooooooOOOOOOOOOOOOOOOO8888888888888888@@@@@@@@@@@@|
|oooooccccccccccccccccc::::::::::::::::................                                        .................::::::::::::::::ccccccccccccccccooooooooooooooooOOOOOOOOOOOOOOOO88888888888888888@@@@@@@@@@@@@@|
|ooccccccccccccccccc::::::::::::::::................                                        .................::::::::::::::::ccccccccccccccccooooooooooooooooOOOOOOOOOOOOOOOO88888888888888888@@@@@@@@@@@@@@@@@|
+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
