crates/auto-ascii-eval/tests/snapshots/golden_grids__gradient-motion_48x12_ascii.snap
---
source: crates/auto-ascii-eval/tests/golden_grids.rs
expression: s
---
gradient-motion frame 10
term: 48x12  viewport: 43x12  pads: L2 R3 T0 B0
palette: ascii  fg: chroma
+------------------------------------------------+
|  :::---++++***###@@@@@@@@@###****+++---::::.   |
|  ---++++***###@@@@@@@@@###****+++---::::...    |
|  ++++***###@@@@@@@@@###****+++---::::...       |
|  +***###@@@@@@@@@###****+++---::::...          |
|  *###@@@@@@@@@###***++++---::::...         .   |
|  #@@@@@@@@@###***++++---::::...         ...:   |
|  @@@@@@@###***++++---::::...        ....:::-   |
|  @@@@###***++++---::::...        ....:::----   |
|  @###***++++---:::....        ....:::----+++   |
|  #***++++---:::....        ....:::---++++***   |
|  *++++---:::....        ....:::---++++***###   |
|  ++---:::....        ....:::---++++***####@@   |
+------------------------------------------------+
fg-fnv64 per row:
  0 88d145d0fd5493ec
  1 c3fff30936be0c1b
  2 432819662382201d
  3 266ceb3ddfe44097
  4 ed629790836e7c79
  5 0ae472bdf972e2e3
  6 f7a2f17a8513cef0
  7 2f99deb55b73aebf
  8 650b051336f2e4d1
  9 43e5e1f4a9aec7eb
 10 9d55eb1a978a2e0d
 11 715518a523b9fc3c
