crates/auto-ascii-eval/tests/snapshots/golden_grids__gradient-motion_48x12_mono.snap
---
source: crates/auto-ascii-eval/tests/golden_grids.rs
expression: s
---
gradient-motion frame 10
term: 48x12  viewport: 43x12  pads: L2 R3 T0 B0
palette: mono  fg: none (glyph-only)
+------------------------------------------------+
|  :::cccooooOOO888@@@@@@@@@888OOOOoooccc::::.   |
|  cccooooOOO888@@@@@@@@@888OOOOoooccc::::...    |
|  ooooOOO888@@@@@@@@@888OOOOoooccc::::...       |
|  oOOO888@@@@@@@@@888OOOOoooccc::::...          |
|  O888@@@@@@@@@888OOOooooccc::::...         .   |
|  8@@@@@@@@@888OOOooooccc::::...         ...:   |
|  @@@@@@@888OOOooooccc::::...        ....:::c   |
|  @@@@888OOOooooccc::::...        ....:::cccc   |
|  @888OOOooooccc:::....        ....:::ccccooo   |
|  8OOOooooccc:::....        ....:::cccooooOOO   |
|  Oooooccc:::....        ....:::cccooooOOO888   |
|  ooccc:::....        ....:::cccooooOOO8888@@   |
+------------------------------------------------+
