crates/auto-ascii-eval/tests/snapshots/golden_grids__gradient-motion_80x24_mono.snap
---
source: crates/auto-ascii-eval/tests/golden_grids.rs
expression: s
---
gradient-motion frame 10
term: 80x24  viewport: 80x23  pads: L0 R0 T0 B1
palette: mono  fg: none (glyph-only)
+--------------------------------------------------------------------------------+
|:::::::ccccccooooooOOOOOOO888888@@@@@@@@@@@@@@@@888888OOOOOOooooooccccccc::::::.|
|::::ccccccoooooooOOOOOO888888@@@@@@@@@@@@@@@@888888OOOOOOooooooccccccc::::::....|
|:ccccccoooooooOOOOOO888888@@@@@@@@@@@@@@@@888888OOOOOOooooooccccccc::::::...... |
|ccccoooooooOOOOOO888888@@@@@@@@@@@@@@@@888888OOOOOOooooooocccccc::::::......    |
|coooooooOOOOOO888888@@@@@@@@@@@@@@@@888888OOOOOOooooooocccccc::::::.......      |
|oooooOOOOOO888888@@@@@@@@@@@@@@@@888888OOOOOOooooooocccccc::::::.......         |
|ooOOOOOO888888@@@@@@@@@@@@@@@@888888OOOOOOooooooocccccc::::::.......            |
|OOOOO888888@@@@@@@@@@@@@@@@888888OOOOOOOoooooocccccc::::::.......               |
|OO8888888@@@@@@@@@@@@@@@888888OOOOOOOoooooocccccc:::::::......               ...|
|888888@@@@@@@@@@@@@@@888888OOOOOOOoooooocccccc:::::::......                .....|
|888@@@@@@@@@@@@@@@888888OOOOOOOoooooocccccc:::::::......                ......::|
|@@@@@@@@@@@@@@@8888888OOOOOOoooooocccccc:::::::......                ......:::::|
|@@@@@@@@@@@@8888888OOOOOOoooooocccccc:::::::......                ......::::::cc|
|@@@@@@@@@8888888OOOOOOoooooocccccc:::::::......                ......::::::ccccc|
|@@@@@@8888888OOOOOOooooooccccccc::::::......                ......:::::::cccccco|
|@@@@888888OOOOOOooooooccccccc::::::......                ......:::::::ccccccoooo|
|@888888OOOOOOooooooccccccc::::::......                ......:::::::ccccccooooooO|
|8888OOOOOOooooooccccccc::::::......                ......:::::::ccccccooooooOOOO|
|8OOOOOOooooooocccccc::::::......                ......:::::::ccccccooooooOOOOOOO|
|OOOOooooooocccccc::::::.......               ......:::::::ccccccooooooOOOOOOO888|
|Oooooooocccccc::::::.......               ......:::::::ccccccooooooOOOOOOO888888|
|ooooocccccc::::::.......               .......::::::ccccccooooooOOOOOOO888888@@@|
|oocccccc:::::::......               .......::::::ccccccoooooooOOOOOO888888@@@@@@|
|                                                                                |
+--------------------------------------------------------------------------------+
